# CRM

./: .gitignore  README.md  _write_files.py  package-lock.json  package.json  tsconfig.base.json  turbo.json
CRM Example UI/: CRM Dashboard.html  CRM Landing.html  CRM Login.html
apps/admin-portal/: package.json
apps/web-crm/: next.config.js  package.json  tailwind.config.ts
database/: README.md  mock-data.sql  schema.sql  seed.sql
docs/: sf7-architecture-current.drawio  sf7-enterprise-architecture.drawio
examples/: strands_hello_agent.py
frontend/: _aad_widget_tmp.html  index.html  landing.html  login.html
frontend-react/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/css/: app.css  (+1 more)
infra/: ARCHITECTURE.md  DEPLOY-FIX.md  SECURITY-AUDIT.md  agents-strands-stack.yaml  cloudformation-ai.yaml  cloudformation-proxy.yaml  cloudformation.yaml  cloudshell-deploy.sh  codebuild-stack.yaml  db-init-lambda.js  deploy-agents.sh  deploy-ai.sh  deploy-fargate.sh  deploy-rich-menu.py  deploy-services.sh  deploy-websocket.sh  deploy.sh  destroy.sh  ecr-stack.yaml  fargate-stack.yaml  fix-agent-routing.sh  gen-menu.py  generate-rich-menu-image.py  lambda-handler.js  rebuild-analytics-runtime.sh  rich-menu.html  setup-rich-menu.sh  update-cf-error.py  upload-menu.py
services/agentcore-py/: .gitignore  README.md  agent.py  deploy.py  pyproject.toml  requirements.txt  test_agent.py  vpc-config.txt
services/agentcore-py/agents/: __init__.py  factory.py  prompts.py
services/agentcore-py/tools/: __init__.py  crm_tools.py  db.py
(+520 files in other folders)
