[project]
name = "sf7-agentcore-py"
version = "2.0.0"
description = "SalesFAST 7 Multi-Agent AI on AgentCore Runtime (Python)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.4",
    "strands-agents>=1.0.2",
    "strands-agents-tools>=0.2.9",
    "boto3>=1.36.0",
    "psycopg[binary,pool]>=3.2.4",
    "httpx>=0.28.1",
    "bedrock-agentcore>=0.1.9",
]
